--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,8 +7,8 @@
                 <div class="login-form-1-header">
                     <h3>Sign In to Your Account</h3>
                     <div class="g-f-login text-center">
-                        <a (click)="signInWithGoogle()"><img src="../../assets/img/icon-facebook.png" alt="img"></a>
-                        <a (click)="signInWithFB()"><img src="../../assets/img/icon-Google.png" alt="img"></a>
+                        <a (click)="signInWithFB()"><img src="../../assets/img/icon-facebook.png" alt="img"></a>
+                        <a (click)="signInWithGoogle()"><img src="../../assets/img/icon-Google.png" alt="img"></a>
                     </div>
                 </div>
                 <div class="card-content mrgn-20-0-0">
