--- a/src/app/rfps/state-rfp/state-rfp.component.html
+++ b/src/app/rfps/state-rfp/state-rfp.component.html
@@ -58,13 +58,18 @@
                                                         </tr>
                                                         </thead>
                                                         <tbody>
-                                                        <tr>
+                                                        <tr *ngIf="!adminlogin">
                                                             <td *ngIf="check(rfp.date_entered) == true">{{rfp.date_entered | date:'EEEE, MMM dd, y'}}</td>
                             <td *ngIf="check(rfp.date_entered) == false"></td>
                             <td *ngIf="check(rfp.due_date) == true">{{rfp.due_date | date:'EEEE, MMM dd, y'}}</td>
                             <td *ngIf="check(rfp.due_date) == false"></td>
                                                         </tr>
-    
+                                                        <tr *ngIf="adminlogin">
+                                                                <td>{{rfp.date_entered}}</td>
+                                                               
+                                                                <td>{{rfp.due_date}}</td>
+                                                               
+                                                            </tr>
                                                         </tbody>
                                                     </table>
                                                 </div>
